<resources>
    <string name="app_name">Myd</string>
    <string name="login">Login</string>
    <string name="title_activity_home">home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="ainda_n_o_sou_cadastrado">Ainda não sou cadastrado</string>
    <string name="nome">Nome</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="criar_conta">Criar conta</string>
    <string name="j_tem_uma_conta">Já tem uma conta ?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
