<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background=" #000">

    <LinearLayout
        style="@style/styleLinearLayoutTelaInteira"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout style="@style/styleLinearLayoutEditText">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_account_box_black_24dp" />

                <EditText
                    android:id="@+id/EditTextLoginEmail"
                    style="@style/styleEditTextLoginCadastro"
                    android:hint="@string/e_mail"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout style="@style/styleLinearLayoutDivisorias"></LinearLayout>

            <LinearLayout style="@style/styleLinearLayoutEditText">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_lock_black_24dp" />

                <EditText
                    android:id="@+id/EditTextLoginSenha"
                    style="@style/styleEditTextLoginCadastro"
                    android:hint="@string/senha"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout style="@style/styleLinearLayoutDivisorias"></LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/styleLinearLayoutTelaInteira"
        android:layout_marginBottom="20dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ButtonLogin"
            style="@style/styleTextViewButtonLoginCadastro"
            android:onClick="validacaoDeLogin"
            android:text="@string/login" />

        <TextView
            android:id="@+id/TextViewAindaNaoSouCadastrado"
            style="@style/styleTextViewLoginCadastro"
            android:onClick="cadastro"
            android:text="@string/ainda_n_o_sou_cadastrado" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="400dp"
        android:gravity="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@mipmap/myd2" />
    </LinearLayout>


</RelativeLayout>