<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <LinearLayout
        style="@style/styleLinearLayoutTelaInteira"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout style="@style/styleLinearLayoutEditText">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_email_black_24dp" />

                <EditText
                    android:id="@+id/EditTextCadastroEmail"
                    style="@style/styleEditTextLoginCadastro"
                    android:hint="@string/e_mail"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout style="@style/styleLinearLayoutDivisorias"></LinearLayout>

            <LinearLayout style="@style/styleLinearLayoutEditText">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_person_black_24dp" />

                <EditText
                    android:id="@+id/EditTextCadastroNome"
                    style="@style/styleEditTextLoginCadastro"
                    android:hint="@string/nome"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout style="@style/styleLinearLayoutDivisorias"></LinearLayout>

            <LinearLayout style="@style/styleLinearLayoutEditText">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_perm_identity_black_24dp" />

                <EditText
                    android:id="@+id/EditTextCadastrocPF"
                    style="@style/styleEditTextLoginCadastro"
                    android:hint="CPF"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout style="@style/styleLinearLayoutDivisorias"></LinearLayout>

            <LinearLayout style="@style/styleLinearLayoutEditText">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_lock_black_24dp" />

                <EditText
                    android:id="@+id/EditTextCadastroSenha"
                    style="@style/styleEditTextLoginCadastro"
                    android:hint="@string/senha"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout style="@style/styleLinearLayoutDivisorias"></LinearLayout>

            <LinearLayout style="@style/styleLinearLayoutEditText">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_lock_black_24dp" />

                <EditText
                    android:id="@+id/EditTextCadastroConfimarSenha"
                    style="@style/styleEditTextLoginCadastro"
                    android:hint="@string/confirmar_senha"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout style="@style/styleLinearLayoutDivisorias"></LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/styleLinearLayoutTelaInteira"
        android:layout_marginBottom="20dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ButtonCriarConta"
            style="@style/styleTextViewButtonLoginCadastro"
            android:onClick="cadastrar"
            android:text="@string/criar_conta" />

        <TextView
            android:id="@+id/TextViewJaTemUmaConta"
            style="@style/styleTextViewLoginCadastro"
            android:text="@string/j_tem_uma_conta"
            android:onClick="irParaLogin"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="400dp"
        android:gravity="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@mipmap/myd2" />
    </LinearLayout>
</RelativeLayout>